update de dependências

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ Flask-Migrate = "^3.1.0"
 Flask-Script = "^2.0.6"
 SQLAlchemy-serializer = "^1.4.1"
 PyJWT = "^2.3.0"
+python-dotenv = "^0.19.2"
+SQLAlchemy-Utils = "^0.37.9"
 
 [tool.poetry.dev-dependencies]
 
