--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ PyJWT = "^2.3.0"
 python-dotenv = "^0.19.2"
 SQLAlchemy-Utils = "^0.37.9"
 Flask-Cors = "^3.0.10"
+pytest = "^6.2.5"
+mysql-connector-python = "^8.0.27"
 
 [tool.poetry.dev-dependencies]
 
